Code Polish v1 (#2103)
* Remove Spigot platform modules and related dependencies

This commit removes all Spigot platform-specific modules, classes, and build configurations, including `AbstractSpigotPlatform`, `NbtApiInitializer`, and corresponding project configuration files (POMs). This cleanup helps streamline the project and eliminates dependencies on Spigot and NBT-API.

* Bumped Java version usage to 21.

* Remove deprecated economy-related classes and implementations.

This commit removes obsolete economy-related classes, interfaces, and implementations. The code cleanup includes `AbstractEconomy`, `Benefit`, `DepositEconomyOperation`, and economy implementations like `Economy_Vault` and `Economy_VaultUnlocked`. These were either redundant or replaced by new approaches.

* Refactor economy package structure.

Renamed and updated references for the "economyrevamp" package to "economy" for better clarity and consistency across the project. This includes file paths, imports, and related classes. No functional changes were made.

* Remove deprecated classes and methods from the codebase.

This commit eliminates several deprecated classes and methods across various packages, including ItemExpression, ShopModerator, and VaultPermissionProvider. Redundant functionality has been consolidated or replaced with newer implementations, improving maintainability and reducing legacy code bloat.

* Fix typo in method documentation in Shop.java

Corrected "attacked" to "attached" in the JavaDoc of the `checkShop` method to ensure the comment accurately describes the method's purpose. This improves code clarity and reduces potential confusion for developers.

* Update changelog.

* Update dependencies and adjust logging and API methods

Updated several dependencies, including updating commons-lang3 to 3.18.0, and adjusted dependency scopes and exclusions for better modularity. Refactored the `getPlayerLocale` method to use `QUser` instead of `UUID`. Minor logging implementati