@@ -34,21 +34,21 @@ public class SubCommand_Price implements CommandHandler<Player> {
 
     BigDecimal price = null;
     try {
-      price = Util.parse(parser.getArgs().get(0));
+      price = Util.parse(parser.getArgs().getFirst());
     } catch(final Exception ignore) {
     }
 
     if(price == null) {
       // No number input
       Log.debug("Price sub command had issue with price parameter.");
-      plugin.text().of(sender, "not-a-number", parser.getArgs().get(0)).send();
+      plugin.text().of(sender, "not-a-number", parser.getArgs().getFirst()).send();
       return;
     }
 
     final double priceDouble = price.doubleValue();
     // No number input
     if(Double.isInfinite(priceDouble) || Double.isNaN(priceDouble)) {
-      plugin.text().of(sender, "not-a-number", parser.getArgs().get(0)).send();
+      plugin.text().of(sender, "not-a-number", parser.getArgs().getFirst()).send();
       return;
     }
     final Shop shop = getLookingShop(sender);
